--- a/gsoc14-progress-working-with-geometry.html
+++ b/gsoc14-progress-working-with-geometry.html
@@ -10,11 +10,13 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | GSoC&#8216;14 Progress: Working with&nbsp;geometry" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
+        <meta property="og:description" content="<p>This week I completed <code>refraction_angle</code>. Now it also works with <code>Ray3D</code> and <code>Plane</code>. This function calculates transmitted vector after refraction. <code>medium1</code> and <code>medium2</code> can be <code>Medium</code>or any sympifiable&nbsp;object.</p>
+<p>If<code>incident</code> is an object of <code>Ray3D</code>, <code>normal</code> also has to be an instance of <code>Ray3D</code> in order to get ...</p>" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 Progress: Working with&nbsp;geometry" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:description" content="<p>This week I completed <code>refraction_angle</code>. Now it also works with <code>Ray3D</code> and <code>Plane</code>. This function calculates transmitted vector after refraction. <code>medium1</code> and <code>medium2</code> can be <code>Medium</code>or any sympifiable&nbsp;object.</p>
+<p>If<code>incident</code> is an object of <code>Ray3D</code>, <code>normal</code> also has to be an instance of <code>Ray3D</code> in order to get ...</p>" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-working-with-geometry" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -108,7 +110,7 @@ Currently I’m working(stuck) on locating mirrors in space. It’s an amalgamat
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Content of this website is owned by Sudhanshu Mishra. &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
