--- a/gsoc14-third-week.html
+++ b/gsoc14-third-week.html
@@ -10,11 +10,15 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | GSoC&#8216;14: Third&nbsp;week" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
+        <meta property="og:description" content="<p>It was another not so productive week but I learnt a lot regarding how to write new classes by extending classes like <code>Basic</code>, <code>Symbol</code> and <code>Expr</code>.</p>
+<p>Last week got stuck with the rewrite expression mechanism which turned
+out to be a bug in the <code>core</code>. Thanks to <a href="https://github.com/flacjacket">Sean</a> for the ...</p>" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | GSoC&#8216;14: Third&nbsp;week" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:description" content="<p>It was another not so productive week but I learnt a lot regarding how to write new classes by extending classes like <code>Basic</code>, <code>Symbol</code> and <code>Expr</code>.</p>
+<p>Last week got stuck with the rewrite expression mechanism which turned
+out to be a bug in the <code>core</code>. Thanks to <a href="https://github.com/flacjacket">Sean</a> for the ...</p>" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-third-week" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -138,7 +142,7 @@ Sean once I get it&nbsp;working.</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Content of this website is owned by Sudhanshu Mishra. &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
