--- a/archives.html
+++ b/archives.html
@@ -102,7 +102,7 @@
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Content of this website is owned by Sudhanshu Mishra. &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
