--- a/battery-status-api-in-chrome.html
+++ b/battery-status-api-in-chrome.html
@@ -10,11 +10,19 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Battery Status <span class="caps">API</span> in&nbsp;Chrome" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
+        <meta property="og:description" content="<p>Implementation of <span class="caps">HTML</span> battery status <span class="caps">API</span> is a bit different in webkit.
+It has not been exposed with <code>navigator.battery</code>.
+This works fine in Gecko(Firefox) but you might have hard time if you
+try it on&nbsp;Chrome.</p>
+<p>After banging my head for few days against some chromium issues I ...</p>" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Battery Status <span class="caps">API</span> in&nbsp;Chrome" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:description" content="<p>Implementation of <span class="caps">HTML</span> battery status <span class="caps">API</span> is a bit different in webkit.
+It has not been exposed with <code>navigator.battery</code>.
+This works fine in Gecko(Firefox) but you might have hard time if you
+try it on&nbsp;Chrome.</p>
+<p>After banging my head for few days against some chromium issues I ...</p>" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/battery-status-api-in-chrome" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -115,7 +123,7 @@ v38.0.2125.92</a>.</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Content of this website is owned by Sudhanshu Mishra. &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
