--- a/binpy-n-bit-ripple-counter.html
+++ b/binpy-n-bit-ripple-counter.html
@@ -10,11 +10,23 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | BinPy: N Bit Ripple&nbsp;Counter" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
+        <meta property="og:description" content="<p><img alt="Logo" src="http://binpy.github.io/images/logo.png" /></p>
+<p><a href="http://binpy.github.io">BinPy</a> is almost ready to create things. This
+post focuses on building a ripple counter using&nbsp;it.</p>
+<p><strong>Theory</strong></p>
+<p>A ripple counter is an asynchronous counter where only the first
+flip-flop is clocked by an external clock. All subsequent flip-flops are
+clocked by the output of the preceding flip-flop. Asynchronous counters ...</p>" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | BinPy: N Bit Ripple&nbsp;Counter" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:description" content="<p><img alt="Logo" src="http://binpy.github.io/images/logo.png" /></p>
+<p><a href="http://binpy.github.io">BinPy</a> is almost ready to create things. This
+post focuses on building a ripple counter using&nbsp;it.</p>
+<p><strong>Theory</strong></p>
+<p>A ripple counter is an asynchronous counter where only the first
+flip-flop is clocked by an external clock. All subsequent flip-flops are
+clocked by the output of the preceding flip-flop. Asynchronous counters ...</p>" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/binpy-n-bit-ripple-counter" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -215,7 +227,7 @@ comments.&nbsp;Cheers!</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Content of this website is owned by Sudhanshu Mishra. &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
