--- a/gsoc-2014-with-sympy.html
+++ b/gsoc-2014-with-sympy.html
@@ -10,11 +10,19 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | GSoC 2014 with&nbsp;SymPy" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
+        <meta property="og:description" content="<p>My proposal is intended to add more to optics in SymPy. Till now it can
+only do computations related to Gaussian optics and a bit of geometrical
+optics. <a href="https://github.com/certik">Ondřej Čertík</a> and <a href="https://github.com/flacjacket">Sean
+Vig</a> are my mentors for the&nbsp;project.</p>
+<p>For those who don&#8217;t know what is SymPy, SymPy is ...</p>" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | GSoC 2014 with&nbsp;SymPy" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:description" content="<p>My proposal is intended to add more to optics in SymPy. Till now it can
+only do computations related to Gaussian optics and a bit of geometrical
+optics. <a href="https://github.com/certik">Ondřej Čertík</a> and <a href="https://github.com/flacjacket">Sean
+Vig</a> are my mentors for the&nbsp;project.</p>
+<p>For those who don&#8217;t know what is SymPy, SymPy is ...</p>" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc-2014-with-sympy" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -113,7 +121,7 @@ and SymPy for this&nbsp;opportunity!</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Content of this website is owned by Sudhanshu Mishra. &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
