--- a/gsoc14-week-10-adding-more-to-utils.html
+++ b/gsoc14-week-10-adding-more-to-utils.html
@@ -10,11 +10,21 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | GSoC&#8216;14 Week 10: Adding more to&nbsp;utils" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
+        <meta property="og:description" content="<p>This week I worked on adding more utility function in optics. Some of them are yet to be added. I&#8217;ll send a pull request once I write tests for&nbsp;them.</p>
+<p>Here&#8217;s the link to the code pushed till&nbsp;now:</p>
+<ul>
+<li>https://github.com/debugger22/sympy/compare/util-funcs</li>
+</ul>
+<p>I also ...</p>" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 Week 10: Adding more to&nbsp;utils" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:description" content="<p>This week I worked on adding more utility function in optics. Some of them are yet to be added. I&#8217;ll send a pull request once I write tests for&nbsp;them.</p>
+<p>Here&#8217;s the link to the code pushed till&nbsp;now:</p>
+<ul>
+<li>https://github.com/debugger22/sympy/compare/util-funcs</li>
+</ul>
+<p>I also ...</p>" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-week-10-adding-more-to-utils" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -100,7 +110,7 @@
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Content of this website is owned by Sudhanshu Mishra. &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
