--- a/setting-up-tornado-server-on-ubuntu-1204.html
+++ b/setting-up-tornado-server-on-ubuntu-1204.html
@@ -10,11 +10,21 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Setting up Tornado server on Ubuntu&nbsp;12.04" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
+        <meta property="og:description" content="<p><img alt="Tornado" src="http://www.tornadoweb.org/en/stable/_images/tornado.png" /></p>
+<p>Lately I was looking at Tornado which has been open sourced by Facebook.
+It was originally developed at FriendFeed. It has a great capability to
+handle tens of thousands on live connections at a time making it ideal
+for long polling, WebSockets, and other applications that require a
+long-lived connection ...</p>" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Setting up Tornado server on Ubuntu&nbsp;12.04" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:description" content="<p><img alt="Tornado" src="http://www.tornadoweb.org/en/stable/_images/tornado.png" /></p>
+<p>Lately I was looking at Tornado which has been open sourced by Facebook.
+It was originally developed at FriendFeed. It has a great capability to
+handle tens of thousands on live connections at a time making it ideal
+for long polling, WebSockets, and other applications that require a
+long-lived connection ...</p>" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/setting-up-tornado-server-on-ubuntu-1204" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -174,7 +184,7 @@ computing server for online version of <a href="http://www.binpy.org/">Binpy</a>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Content of this website is owned by Sudhanshu Mishra. &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
