--- a/top-hacker-news-archive.html
+++ b/top-hacker-news-archive.html
@@ -10,11 +10,19 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Top Hacker News&nbsp;Archive" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="A blog by Sudhanshu Mishra" />
+        <meta property="og:description" content="<p><a href="https://news.ycombinator.com/">Hacker News&#8217;</a> top 5 entries are some
+beautiful stories that can&#8217;t be missed by a technology enthusiast. The
+problem is <span class="caps">HN</span> gives more weight-age to the period of existence of a post
+and hence articles decay rapidly as time passes. I try my best to read
+most of them ...</p>" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Top Hacker News&nbsp;Archive" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:description" content="<p><a href="https://news.ycombinator.com/">Hacker News&#8217;</a> top 5 entries are some
+beautiful stories that can&#8217;t be missed by a technology enthusiast. The
+problem is <span class="caps">HN</span> gives more weight-age to the period of existence of a post
+and hence articles decay rapidly as time passes. I try my best to read
+most of them ...</p>" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/top-hacker-news-archive" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -104,7 +112,7 @@ sources&nbsp;too.</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Content of this website is owned by Sudhanshu Mishra. &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
