--- a/battery-status-api-in-chrome.html
+++ b/battery-status-api-in-chrome.html
@@ -10,19 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Battery Status <span class="caps">API</span> in&nbsp;Chrome" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>Implementation of <span class="caps">HTML</span> battery status <span class="caps">API</span> is a bit different in webkit.
-It has not been exposed with <code>navigator.battery</code>.
-This works fine in Gecko(Firefox) but you might have hard time if you
-try it on&nbsp;Chrome.</p>
-<p>After banging my head for few days against some chromium issues I ...</p>" />
+        <meta property="og:description" content="Implementation of HTML battery status API is a bit different in webkit. It has not been exposed with navigator.battery. This works fine in Gecko(Firefox) but you might have hard time if you try it on Chrome. After banging my head for few days against some chromium issues I ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Battery Status <span class="caps">API</span> in&nbsp;Chrome" />
-        <meta name="twitter:description" content="<p>Implementation of <span class="caps">HTML</span> battery status <span class="caps">API</span> is a bit different in webkit.
-It has not been exposed with <code>navigator.battery</code>.
-This works fine in Gecko(Firefox) but you might have hard time if you
-try it on&nbsp;Chrome.</p>
-<p>After banging my head for few days against some chromium issues I ...</p>" />
+        <meta name="twitter:description" content="Implementation of HTML battery status API is a bit different in webkit. It has not been exposed with navigator.battery. This works fine in Gecko(Firefox) but you might have hard time if you try it on Chrome. After banging my head for few days against some chromium issues I ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/battery-status-api-in-chrome" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
