--- a/gsoc14-progress-week-12.html
+++ b/gsoc14-progress-week-12.html
@@ -10,13 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | GSoC&#8216;14 progress: Week&nbsp;12" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>Last week I worked on utility functions which has been merged into the master.
-Currently I am working on converting my incopmlete <span class="caps">PR</span> related to geometrical optics in 3D into 2D. Creating these classes in 3D will make it difficult to use/extend. I referred to some books and I ...</p>" />
+        <meta property="og:description" content="Last week I worked on utility functions which has been merged into the master. Currently I am working on converting my incopmlete PR related to geometrical optics in 3D into 2D. Creating these classes in 3D will make it difficult to use/extend. I referred to some books and I ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 progress: Week&nbsp;12" />
-        <meta name="twitter:description" content="<p>Last week I worked on utility functions which has been merged into the master.
-Currently I am working on converting my incopmlete <span class="caps">PR</span> related to geometrical optics in 3D into 2D. Creating these classes in 3D will make it difficult to use/extend. I referred to some books and I ...</p>" />
+        <meta name="twitter:description" content="Last week I worked on utility functions which has been merged into the master. Currently I am working on converting my incopmlete PR related to geometrical optics in 3D into 2D. Creating these classes in 3D will make it difficult to use/extend. I referred to some books and I ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-12" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
