--- a/gsoc14-progress-working-with-geometry.html
+++ b/gsoc14-progress-working-with-geometry.html
@@ -10,13 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | GSoC&#8216;14 Progress: Working with&nbsp;geometry" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>This week I completed <code>refraction_angle</code>. Now it also works with <code>Ray3D</code> and <code>Plane</code>. This function calculates transmitted vector after refraction. <code>medium1</code> and <code>medium2</code> can be <code>Medium</code>or any sympifiable&nbsp;object.</p>
-<p>If<code>incident</code> is an object of <code>Ray3D</code>, <code>normal</code> also has to be an instance of <code>Ray3D</code> in order to get ...</p>" />
+        <meta property="og:description" content="This week I completed refraction_angle. Now it also works with Ray3D and Plane. This function calculates transmitted vector after refraction. medium1 and medium2 can be Mediumor any sympifiable object. Ifincident is an object of Ray3D, normal also has to be an instance of Ray3D in order to get ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 Progress: Working with&nbsp;geometry" />
-        <meta name="twitter:description" content="<p>This week I completed <code>refraction_angle</code>. Now it also works with <code>Ray3D</code> and <code>Plane</code>. This function calculates transmitted vector after refraction. <code>medium1</code> and <code>medium2</code> can be <code>Medium</code>or any sympifiable&nbsp;object.</p>
-<p>If<code>incident</code> is an object of <code>Ray3D</code>, <code>normal</code> also has to be an instance of <code>Ray3D</code> in order to get ...</p>" />
+        <meta name="twitter:description" content="This week I completed refraction_angle. Now it also works with Ray3D and Plane. This function calculates transmitted vector after refraction. medium1 and medium2 can be Mediumor any sympifiable object. Ifincident is an object of Ray3D, normal also has to be an instance of Ray3D in order to get ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-working-with-geometry" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
