--- a/linux-and-lenovo-essential-g580.html
+++ b/linux-and-lenovo-essential-g580.html
@@ -10,17 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Linux and Lenovo Essential&nbsp;G580" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>Lenovo Essential G580 is the laptop which has highest number of conflicts with
-aLinux <span class="caps">OS</span>. The biggest problem is when you install a Linux <span class="caps">OS</span> you will
-<strong>lose access to your <span class="caps">BIOS</span> setup</strong> and that&#8217;s permanent. I faced this
-problem and I sent my laptop to service center to ...</p>" />
+        <meta property="og:description" content="Lenovo Essential G580 is the laptop which has highest number of conflicts with aLinux OS. The biggest problem is when you install a Linux OS you will lose access to your BIOS setup and that’s permanent. I faced this problem and I sent my laptop to service center to ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Linux and Lenovo Essential&nbsp;G580" />
-        <meta name="twitter:description" content="<p>Lenovo Essential G580 is the laptop which has highest number of conflicts with
-aLinux <span class="caps">OS</span>. The biggest problem is when you install a Linux <span class="caps">OS</span> you will
-<strong>lose access to your <span class="caps">BIOS</span> setup</strong> and that&#8217;s permanent. I faced this
-problem and I sent my laptop to service center to ...</p>" />
+        <meta name="twitter:description" content="Lenovo Essential G580 is the laptop which has highest number of conflicts with aLinux OS. The biggest problem is when you install a Linux OS you will lose access to your BIOS setup and that’s permanent. I faced this problem and I sent my laptop to service center to ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/linux-and-lenovo-essential-g580" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
