--- a/moving-to-a-static-site-generator.html
+++ b/moving-to-a-static-site-generator.html
@@ -10,15 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Moving to a static site&nbsp;generator" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p><img alt="Pelican" src="https://pbs.twimg.com/profile_images/3330071480/8fc5b7f80b98bcc67512795fe5fb9291.png" /></p>
-<p>Finally I moved to a static site generator for my homepage + blog. Previously, I was using <a href="http://blog.sudhanshumishra.in">blogger</a> which was really annoying when writing a technical post. Code formatting was&nbsp;bizarre!</p>
-<p>Of all the static website generators I chose <a href="http://getpelican.com">Pelican</a>. It is written in Python and it doesn&#8217;t require any ...</p>" />
+        <meta property="og:description" content="Finally I moved to a static site generator for my homepage + blog. Previously, I was using blogger which was really annoying when writing a technical post. Code formatting was bizarre! Of all the static website generators I chose Pelican. It is written in Python and it doesn’t require any ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Moving to a static site&nbsp;generator" />
-        <meta name="twitter:description" content="<p><img alt="Pelican" src="https://pbs.twimg.com/profile_images/3330071480/8fc5b7f80b98bcc67512795fe5fb9291.png" /></p>
-<p>Finally I moved to a static site generator for my homepage + blog. Previously, I was using <a href="http://blog.sudhanshumishra.in">blogger</a> which was really annoying when writing a technical post. Code formatting was&nbsp;bizarre!</p>
-<p>Of all the static website generators I chose <a href="http://getpelican.com">Pelican</a>. It is written in Python and it doesn&#8217;t require any ...</p>" />
+        <meta name="twitter:description" content="Finally I moved to a static site generator for my homepage + blog. Previously, I was using blogger which was really annoying when writing a technical post. Code formatting was bizarre! Of all the static website generators I chose Pelican. It is written in Python and it doesn’t require any ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/moving-to-a-static-site-generator" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
