--- a/easy-caching-in-android.html
+++ b/easy-caching-in-android.html
@@ -10,17 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Easy caching in&nbsp;Android" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>Recently I found a better way to
-cache data in Android. It can also be used to save preferences of users. I was using SQLite before and it was cumbersome. I had to make a table to save just few key-value&nbsp;pairs.</p>
-<p>Android <span class="caps">SDK</span> comes with an <span class="caps">API</span>
-called <code style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border-top-left-radius: 4px; border-top-right-radius: 4px; font-family: Menlo, Consolas, 'Courier New', monospace; font-size: 12px !important; padding: 2px 4px; white-space: nowrap;">android ...</code></p>" />
+        <meta property="og:description" content="Recently I found a better way to cache data in Android. It can also be used to save preferences of users. I was using SQLite before and it was cumbersome. I had to make a table to save just few key-value pairs. Android SDK comes with an API called android ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Easy caching in&nbsp;Android" />
-        <meta name="twitter:description" content="<p>Recently I found a better way to
-cache data in Android. It can also be used to save preferences of users. I was using SQLite before and it was cumbersome. I had to make a table to save just few key-value&nbsp;pairs.</p>
-<p>Android <span class="caps">SDK</span> comes with an <span class="caps">API</span>
-called <code style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border-top-left-radius: 4px; border-top-right-radius: 4px; font-family: Menlo, Consolas, 'Courier New', monospace; font-size: 12px !important; padding: 2px 4px; white-space: nowrap;">android ...</code></p>" />
+        <meta name="twitter:description" content="Recently I found a better way to cache data in Android. It can also be used to save preferences of users. I was using SQLite before and it was cumbersome. I had to make a table to save just few key-value pairs. Android SDK comes with an API called android ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/easy-caching-in-android" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
