--- a/two-things-dockerizing-applications-and-aws-on-the-house-services.html
+++ b/two-things-dockerizing-applications-and-aws-on-the-house-services.html
@@ -10,19 +10,11 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Two things: Dockerizing Applications and <span class="caps">AWS</span>&#8217; on the house&nbsp;services" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="<p>Lately I migrated my app from DigitalOcean to <span class="caps">AWS</span> and encountered the
-pain of setting up similar environment.(Documenting everything is very&nbsp;important!)</p>
-<p>I heard long ago about <a href="https://docker.io/">Docker</a> but never bothered
-to tinker with it. If you don&#8217;t know, Docker is a platform for
-developers and sysadmins to ...</p>" />
+        <meta property="og:description" content="Lately I migrated my app from DigitalOcean to AWS and encountered the pain of setting up similar environment.(Documenting everything is very important!) I heard long ago about Docker but never bothered to tinker with it. If you don’t know, Docker is a platform for developers and sysadmins to ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Two things: Dockerizing Applications and <span class="caps">AWS</span>&#8217; on the house&nbsp;services" />
-        <meta name="twitter:description" content="<p>Lately I migrated my app from DigitalOcean to <span class="caps">AWS</span> and encountered the
-pain of setting up similar environment.(Documenting everything is very&nbsp;important!)</p>
-<p>I heard long ago about <a href="https://docker.io/">Docker</a> but never bothered
-to tinker with it. If you don&#8217;t know, Docker is a platform for
-developers and sysadmins to ...</p>" />
+        <meta name="twitter:description" content="Lately I migrated my app from DigitalOcean to AWS and encountered the pain of setting up similar environment.(Documenting everything is very important!) I heard long ago about Docker but never bothered to tinker with it. If you don’t know, Docker is a platform for developers and sysadmins to ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/two-things-dockerizing-applications-and-aws-on-the-house-services" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
