--- a/binpy-n-bit-ripple-counter.html
+++ b/binpy-n-bit-ripple-counter.html
@@ -197,9 +197,9 @@ comments.&nbsp;Cheers!</p>
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li>
-                            <li><a href="https://github.com/debugger22">GitHub</a></li>
-                            <li><a href="https://twitter.com/debugger22">Twitter</a></li>
+                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li><br/>
+                            <li><a href="https://github.com/debugger22">GitHub</a></li><br/>
+                            <li><a href="https://twitter.com/debugger22">Twitter</a></li><br/>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
