--- a/gsoc14-progress-week-12.html
+++ b/gsoc14-progress-week-12.html
@@ -82,9 +82,9 @@ Currently I am working on converting my incopmlete <span class="caps">PR</span> 
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li>
-                            <li><a href="https://github.com/debugger22">GitHub</a></li>
-                            <li><a href="https://twitter.com/debugger22">Twitter</a></li>
+                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li><br/>
+                            <li><a href="https://github.com/debugger22">GitHub</a></li><br/>
+                            <li><a href="https://twitter.com/debugger22">Twitter</a></li><br/>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
