--- a/gsoc14-progress-week-5.html
+++ b/gsoc14-progress-week-5.html
@@ -101,9 +101,9 @@ need it to be in master to work on more&nbsp;implementations.</p>
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li>
-                            <li><a href="https://github.com/debugger22">GitHub</a></li>
-                            <li><a href="https://twitter.com/debugger22">Twitter</a></li>
+                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li><br/>
+                            <li><a href="https://github.com/debugger22">GitHub</a></li><br/>
+                            <li><a href="https://twitter.com/debugger22">Twitter</a></li><br/>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
