--- a/gsoc14-progress-week-6.html
+++ b/gsoc14-progress-week-6.html
@@ -88,9 +88,9 @@ thank <a href="https://github.com/flacjacket">Sean</a>, <a href="https://githu
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li>
-                            <li><a href="https://github.com/debugger22">GitHub</a></li>
-                            <li><a href="https://twitter.com/debugger22">Twitter</a></li>
+                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li><br/>
+                            <li><a href="https://github.com/debugger22">GitHub</a></li><br/>
+                            <li><a href="https://twitter.com/debugger22">Twitter</a></li><br/>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
