--- a/setting-up-tornado-server-on-ubuntu-1204.html
+++ b/setting-up-tornado-server-on-ubuntu-1204.html
@@ -156,9 +156,9 @@ computing server for online version of <a href="http://www.binpy.org/">Binpy</a>
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li>
-                            <li><a href="https://github.com/debugger22">GitHub</a></li>
-                            <li><a href="https://twitter.com/debugger22">Twitter</a></li>
+                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li><br/>
+                            <li><a href="https://github.com/debugger22">GitHub</a></li><br/>
+                            <li><a href="https://twitter.com/debugger22">Twitter</a></li><br/>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
