--- a/two-things-dockerizing-applications-and-aws-on-the-house-services.html
+++ b/two-things-dockerizing-applications-and-aws-on-the-house-services.html
@@ -5,7 +5,6 @@
         <title>Two things: Dockerizing Applications and AWS’ on the house services</title>
         <link rel="stylesheet" href="http://www.sudhanshumishra.in/theme/css/main.css" />
         <link href="http://www.sudhanshumishra.in/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Shortlog Atom Feed" />
-        <link href="http://www.sudhanshumishra.in/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Shortlog RSS Feed" />
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/two-things-dockerizing-applications-and-aws-on-the-house-services" />
         <meta property="og:type" content="article" />
@@ -104,24 +103,24 @@ weeks!&nbsp;Cheers!</p>
   </article>
 </section>
         <section id="extras" class="body">
-            <div class="social">
-                    <h2>social</h2>
-                    <ul>
-                        <li><a href="http://www.sudhanshumishra.in/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
-                        <li><a href="http://www.sudhanshumishra.in/feeds/all.rss.xml" type="application/rss+xml" rel="alternate">rss feed</a></li>
+                <div class="blogroll">
+                        <h2>blogroll</h2>
+                        <ul>
+                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li>
+                        </ul>
+                </div><!-- /.blogroll -->
+                <div class="social">
+                        <h2>social</h2>
+                        <ul>
+                            <li><a href="http://www.sudhanshumishra.in/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-                        <li><a href="https://twitter.com/debugger22">Twitter</a></li>
-                        <li><a href="https://github.com/debugger22">Github</a></li>
-                    </ul>
-            </div><!-- /.social -->
-            <div class="blogroll">
-                    <h2>blogroll</h2>
-                    <ul>
-                        <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li>
-                        <li><a href="https://github.com/debugger22">GitHub</a></li>
-                        <li><a href="https://twitter.com/debugger22">Twitter</a></li>
-                    </ul>
-            </div><!-- /.blogroll -->
+                            <li><a href="https://twitter.com/debugger22">Twitter</a></li>
+                            <li><a href="https://github.com/debugger22">Github</a></li>
+                            <li><a href="https://www.linkedin.com/in/sudmishra">LinkedIn</a></li>
+                            <li><a href="https://news.ycombinator.com/user?id=sudmishra">Hacker News</a></li>
+                            <li><a href="http://www.last.fm/user/debugger22">last.fm</a></li>
+                        </ul>
+                </div><!-- /.social -->
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
